--- a/DocumentsUpload/appsettings.json
+++ b/DocumentsUpload/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DocumentUploadDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "SendGrid": {
-    "SendGridKey": "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"
+    "SendGridKey": ""
   },
   "Logging": {
     "LogLevel": {
